--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css":"npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/styles.css --watch"
   },
   "keywords": [],
   "author": "",
