--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css":"npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/styles.css --watch"
+    "build:css":"npx tailwindcss -i ./static/css/tailwind.css -o ./static/css/build.css --watch"
   },
   "keywords": [],
   "author": "",
